--- a/OMAC/mm.html
+++ b/OMAC/mm.html
@@ -9,7 +9,7 @@
     
     </p>
 <h1>Regisration form</h1>
-<form mathod="post" action="https://www.google.com/search">
+<form mathod="post" action="/mon.html">
     <label for="fullname">Name:</label>
     <input type="text"id="fullname"name="full_name"/><br><br>
     <label for="age">Age:</label>
@@ -39,6 +39,7 @@
 <input type="submit" value="submit">
 <input type="reset" value="Reset">
 <p>
+    </form>
     <form action="https://www.google.com/search" mathod="get" target="_blank">
         <label for="">Search:</label>
         <input type="text" name="q" id="query">
