--- a/OMAC/mm.html
+++ b/OMAC/mm.html
@@ -33,6 +33,7 @@
 <input type="email"><br><br>
 <label for="">password</label>
 <input type="password"><br><br>
+<button type="submit">submit</button>
 <label for="">Message</label>
 <textarea rows="10" cols="50"></textarea><br><br>
 
