--- a/foo.html
+++ b/foo.html
@@ -14,12 +14,36 @@
     </style>
     <head>
         <body>
-            <h1>This is my link HTML</h1>
-            <p>in the paragrsph to make link between this page and <a href="./mm.html">index </a> page</p>
-            <h2>sudanies refgee</h2>
-            <p>hello welcome</p>
+ </body>
+  <h1>This is my link HTML</h1>
+<p>in the paragrsph to make link between this page and <a href="./mm.html">index </a> page</p>
+<h2>sudanies refgee</h2>
+<p>hello welcome</p>
             <h3><a href="https://www.whatsapp.com/">whatsapp</a></h3><br>
             <img src="what.png" alt="whatsapp"><br>
+
+            <p>
+                this my whatsapp <br>
+                <a href="./OMAC/whatsap.html"><br><img src="what.png" alt="">hello</a> </p><br>
+
+<h1>this is w3schools HTML</h1>
+<P>W3Schools is optimized for learn</P>
+<h2>hello world</h2>
+<p>heloos us</p>
+<h3><a href="https://www.w3schools.com/">w3schools</a></h3><br>
+
+<img src="w3.png" alt="w3schools">
+
+<h1>this is figma</h1>
+<p>figma is optimized for learn</p>
+<h2>hello figma</h2>
+<p>hello to my website</p>
+<h3><a href="https://www.figma.com/">website</a></h3>
+<img src="rt.png" alt="FIGMA">
+
+                
+
+
         </body>
     </head>
 </body>
